--- a/index.css
+++ b/index.css
@@ -22,7 +22,7 @@ body {
 
 .name{
     text-align: center;
-    font-size: 25px;
+    font-size: xx-large;
     font-weight: bolder;
     letter-spacing: 1px;
     padding-bottom: 20px;
@@ -39,7 +39,7 @@ body {
     display: flex;
     align-items: center;
     filter: invert(100%);
-    width: 40px;
+    width: 25px;
 }
 
 .linkicon{
