--- a/index.css
+++ b/index.css
@@ -50,3 +50,18 @@ body {
     width: 100%;
     height: auto;
 }
+
+/* Media queries for responsiveness */
+@media only screen and (max-width: 600px) {
+    .header {
+        padding-right: 0;
+    }
+
+    .bodyContainer {
+        padding: 10px;
+    }
+
+    .name {
+        font-size: large;
+    }
+}
