--- a/index.css
+++ b/index.css
@@ -61,7 +61,7 @@ body {
 
 .projectContainer{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: 1fr;
     gap: 20px;
 
 }
