--- a/index.css
+++ b/index.css
@@ -55,6 +55,8 @@ body {
 .galleryImg{
     width: 100%;
     height: auto;
+    border: 2px solid gray;
+    box-shadow: 2px 2px 6px rgba(222, 219, 219, 0.5);
 }
 
 .galleryContainer{
@@ -121,6 +123,48 @@ body {
     margin-right: 2rem;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+.modal-content img {
+    width: 100%;
+    height: auto;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    color: #f1f1f1;
+    font-size: 35px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
 
 /* Media queries for responsiveness */
 @media only screen and (max-width: 600px) {
